<resources>
    <string name="app_name">资产管理</string>

    <array name="navigation_titles">
        <item name="menu_asset">资产</item>
        <item name="menu_processing">待处理</item>
        <item name="menu_draft">草稿</item>
        <item name="menu_done">已完成</item>
        <item name="menu_me">我</item>
    </array>

    <array name="device_navigation">
        <item name="device_property">设备属性</item>
        <item name="device_service">维修记录</item>
    </array>

    <string name="username">用户名称</string>
    <string name="password">密码</string>
    <string name="username_validate_not_empty">用户名称需要填写</string>
    <string name="password_validate_not_empty">密码需要填写</string>
    <string name="username_password_error">用户或密码错误</string>

    <string name="menu_asset">资产</string>
    <string name="menu_processing">待处理</string>
    <string name="menu_draft">草稿</string>
    <string name="menu_done">已完成</string>
    <string name="menu_me">我</string>

    <string name="login">登陆</string>
    <string name="logout">注销</string>
    <string name="edit">编辑</string>

    <string name="trouble_note">问题通知单</string>
    <string name="trouble_note_detail_add">添加任务</string>
    <string name="trouble_note_edit">编辑表头</string>
    <string name="trouble_note_publish">发布问题</string>
    <string name="trouble_note_publish_success">已发布成功，在"待处理"中查看</string>
    <string name="trouble_note_name_hint">标题</string>
    <string name="site_hint">选择一个部门</string>
    <string name="done">完成</string>
    <string name="name_validate_message">名称不能为空白</string>
    <string name="site_validate_message">请选择一个部门</string>
    <string name="select_images">选择适当的图片</string>
    <string name="trouble_note_detail_content_hint">写上点问题的描述...</string>
    <string name="enable_expired">启用完成期限</string>
    <string name="expired_hint">选择完成日期</string>
    <string name="expired_clear">清除</string>
    <string name="replay_hint">输入反馈内容...</string>
    <string name="trouble_note_detail">任务</string>
    <string name="send">发送</string>
    <string name="reject">驳回</string>
    <string name="expired">完成日期</string>

    <string name="device">设备</string>
    <string name="search">搜索</string>
    <string name="scan">扫描</string>
    <string name="scan_hint">扫描资产二维码</string>
    <string name="flash_on">开</string>
    <string name="flash_off">关</string>
    <string name="install_date">安装时间</string>
    <string name="address">所在位置</string>

    <string name="device_query_hint">设备名称</string>
    <string name="task_query_hint">问题名称</string>

    <string name="loading">请稍等...</string>
    <string name="no_data">没有可以查看的数据</string>
    <string name="load_more">加载更多...</string>

    <string name="retry">重试</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_task_list_fragment">Hello task list fragment</string>
    <string name="hello_me_fragment">Hello me fragment</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="expand">展开</string>
    <string name="collapse">折叠</string>
    <string name="task">任务</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
