<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdwater.assetmanagement.questionmgr.TroubleNoteDetailEditActivity">
    <include layout="@layout/include_toolbar_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_images"
                android:textSize="@dimen/textSize" />

            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
                android:id="@+id/swipeMenuRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            </com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView>

            <EditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:hint="@string/trouble_note_detail_content_hint"
                android:lines="3"
                android:maxLines="10"
                android:minLines="1"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize" />

            <Switch
                android:id="@+id/enableExpiredSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/textSize"
                android:text="@string/enable_expired" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/expiredEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/expired_hint"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
